--- a/views/add-product.html
+++ b/views/add-product.html
@@ -5,10 +5,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>add product</title>
+    <link rel="stylesheet" href="/css/main.css">
 </head>
 
 <body>
+    <header>
+        <nav class="navbar">
+            <ul>
+                <li><a href="/">shop</a></li>
+                <li><a href="/add-product">add product</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <form action="/admin/add-product" method="POST">
+            <input type="text" name="title">
+            <button type="submit">add product</button>
+        </form>
+    </main>
 
 </body>
 
