--- a/views/shop.html
+++ b/views/shop.html
@@ -5,11 +5,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>shop</title>
+    <link rel="stylesheet" href="/css/main.css">
 </head>
 
 <body>
+    <header>
+        <nav class="navbar">
+            <ul>
+                <li><a href="/">shop</a></li>
+                <li><a href="/add-product">add product</a></li>
+            </ul>
+        </nav>
+    </header>
 
+    <main>
+        <h1>My products</h1>
+    </main>
 </body>
 
 </html>
