--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -27,7 +27,7 @@
                                     </p>
                                 </div>
                                 <div class="card__actions">
-                                    <a class="btn" href="/admin/edit-product">Edit</a>
+                                    <a class="btn" href="/admin/edit-product/<%= product.id %>?edit=true">Edit</a>
                                     <form action="/admin/delete-product" method="POST">
                                         <button class="btn" type="submit">Delete</button>
                                     </form>
