--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -29,6 +29,7 @@
                                 <div class="card__actions">
                                     <a class="btn" href="/admin/edit-product/<%= product.id %>?edit=true">Edit</a>
                                     <form action="/admin/delete-product" method="POST">
+                                        <input type="hidden" value="<%= product.id %>" name="productId" id="">
                                         <button class="btn" type="submit">Delete</button>
                                     </form>
                                 </div>
