--- a/views/shop/cart.ejs
+++ b/views/shop/cart.ejs
@@ -5,6 +5,27 @@
     <body>
         <%- include('../includes/navigation.ejs') %>
 
+            <main>
+                <% if(products.length> 0) { %>
 
+                    <ul>
+                        <% products.forEach(p=>{ %>
+                            <li>
+                                <p>
+                                    <%= p.productData.title %>(<%= p.qty %>)
+                                </p>
+
+                                <form action="/cart-delete-item" method="POST">
+                                    <input type="hidden" value="<%= p.productData.id %>" name="productId" id="">
+                                    <button type="submit" class="btn">Delete</button>
+                                </form>
+                            </li>
+                            <% }) %>
+                    </ul>
+
+                    <% } else{ %>
+                        <h1>No Producs In Cart</h1>
+                        <% } %>
+            </main>
 
             <%- include('../includes/end.ejs') %>
