finishing orders funcionality and orders view

--- a/views/shop/cart.ejs
+++ b/views/shop/cart.ejs
@@ -23,6 +23,10 @@
                             <% }) %>
                     </ul>
 
+                    <form action="/create-order" method="POST">
+                        <button type="submit" class="btn">Order Now</button>
+                    </form>
+
                     <% } else{ %>
                         <h1>No Producs In Cart</h1>
                         <% } %>
