--- a/views/admin/edit-product.ejs
+++ b/views/admin/edit-product.ejs
@@ -30,7 +30,7 @@
                     </div>
 
                     <% if(editing){ %>
-                        <input type="hidden" value="<%= product.id %>" name="productId">
+                        <input type="hidden" value="<%= product._id %>" name="productId">
                         <% } %>
 
                             <button class="btn <%= editing ? 'btn-update' : 'btn-add' %>" type="submit">
