--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -27,9 +27,9 @@
                                     </p>
                                 </div>
                                 <div class="card__actions">
-                                    <a class="btn" href="/admin/edit-product/<%= product.id %>?edit=true">Edit</a>
+                                    <a class="btn" href="/admin/edit-product/<%= product._id %>?edit=true">Edit</a>
                                     <form action="/admin/delete-product" method="POST">
-                                        <input type="hidden" value="<%= product.id %>" name="productId" id="">
+                                        <input type="hidden" value="<%= product._id %>" name="productId" id="">
                                         <button class="btn" type="submit">Delete</button>
                                     </form>
                                 </div>
