--- a/views/shop/orders.ejs
+++ b/views/shop/orders.ejs
@@ -17,7 +17,8 @@
                                     <ul class="orders__products">
                                         <% order.products.forEach(p=> { %>
                                             <li class="orders__products-item">
-                                                <%= p.product.title %> (<%= p.quantity %>)
+                                                <%= p.product.title %> (<%= p.quantity %>) - <a
+                                                            href="/orders/<%= order._id %>">invoice</a>
                                             </li>
                                             <% }); %>
                                     </ul>
