--- a/views/shop/orders.ejs
+++ b/views/shop/orders.ejs
@@ -12,16 +12,15 @@
                         <ul class="orders">
                             <% orders.forEach(order=> { %>
                                 <li class="orders__item">
-                                    <h1>Order - # <%= order._id %>
-                                    </h1>
-                                    <ul class="orders__products">
-                                        <% order.products.forEach(p=> { %>
-                                            <li class="orders__products-item">
-                                                <%= p.product.title %> (<%= p.quantity %>) - <a
-                                                            href="/orders/<%= order._id %>">invoice</a>
-                                            </li>
-                                            <% }); %>
-                                    </ul>
+                                    <h1>Order - # <%= order._id %> - <a href="/orders/<%= order._id %>">invoice</a>
+                                </li>
+                                </h1>
+                                <ul class="orders__products">
+                                    <% order.products.forEach(p=> { %>
+                                        <li class="orders__products-item">
+                                            <%= p.product.title %> (<%= p.quantity %>)
+                                                    <% }); %>
+                                </ul>
                                 </li>
                                 <% }); %>
                         </ul>
